--- a/src/assets/sass/globals/_globals.sass
+++ b/src/assets/sass/globals/_globals.sass
@@ -1,2 +1,7 @@
+*,
+*:before,
+*:after 
+  box-sizing: border-box
+  
 html
   font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif
